--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,16 @@ aiogram==3.2.0
     # via -r requirements.in
 aiohttp==3.9.1
     # via aiogram
+aioredis==2.0.1
+    # via -r requirements.in
 aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.6.0
     # via pydantic
+async-timeout==4.0.3
+    # via
+    #   aioredis
+    #   redis
 attrs==23.1.0
     # via aiohttp
 certifi==2023.11.17
@@ -48,11 +54,14 @@ pydantic-core==2.14.5
     # via pydantic
 python-dotenv==1.0.0
     # via environs
+redis==5.0.1
+    # via -r requirements.in
 requests==2.31.0
     # via -r requirements.in
 typing-extensions==4.8.0
     # via
     #   aiogram
+    #   aioredis
     #   pydantic
     #   pydantic-core
 urllib3==2.1.0
