--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ aioredis==2.0.1
     # via -r requirements.in
 aiosignal==1.3.1
     # via aiohttp
+alembic==1.13.1
+    # via -r requirements.in
 annotated-types==0.6.0
     # via pydantic
 async-timeout==4.0.3
@@ -40,6 +42,10 @@ idna==3.6
     #   yarl
 magic-filter==1.0.12
     # via aiogram
+mako==1.3.0
+    # via alembic
+markupsafe==2.1.3
+    # via mako
 marshmallow==3.20.1
     # via environs
 multidict==6.0.4
@@ -53,17 +59,25 @@ pydantic==2.5.2
 pydantic-core==2.14.5
     # via pydantic
 python-dotenv==1.0.0
-    # via environs
+    # via
+    #   -r requirements.in
+    #   environs
 redis==5.0.1
     # via -r requirements.in
 requests==2.31.0
     # via -r requirements.in
+sqlalchemy==2.0.25
+    # via
+    #   -r requirements.in
+    #   alembic
 typing-extensions==4.8.0
     # via
     #   aiogram
     #   aioredis
+    #   alembic
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
 urllib3==2.1.0
     # via requests
 yarl==1.9.3
